<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seaBlue"
    tools:context=".Views.fragments.TranslateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/authCard1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <TextView
                android:id="@+id/cardText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/english_german_translator"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/englishCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authCard1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/sourceLanguage"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/englishText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/formGrey"
                    android:hint="@string/translate_here"
                    android:minLines="5"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/translatedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/englishCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <Spinner
                android:id="@+id/targetLanguage"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:padding="10dp" />
                <TextView
                    android:id="@+id/translatedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="5"
                    android:padding="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:text="@string/translate"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/translatedCard"
            tools:layout_editor_absoluteX="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>